apps/cicd-jenkins/all.yaml
---
# Source: arco-saer-cicd-jenkins-pipelines/templates/00-namespaces/namespace.yml
apiVersion: v1
kind: Namespace
metadata:
  name: 'jenkins-cicd'
  labels:
    argocd.argoproj.io/managed-by: openshift-gitops #argocd instance ns
  annotations:
    argocd.argoproj.io/sync-wave: "-1"
---
# Source: arco-saer-cicd-jenkins-pipelines/templates/02-service/jenkins-svc.yaml
apiVersion: v1
kind: Service
metadata:
  annotations:
    service.alpha.openshift.io/dependencies: '[{"name": "jenkins-jnlp", "namespace": "", "kind": "Service"}]'
    service.openshift.io/infrastructure: 'true'
  name: 'jenkins'
  namespace: 'jenkins-cicd'
spec:
  ports:
    - name: web
      nodePort: 0
      port: 80
      protocol: TCP
      targetPort: 8080
  selector:
    name: 'jenkins'
  sessionAffinity: None
  type: ClusterIP

# apiVersion: v1
# kind: Service
# metadata:
#   name: 'jenkins'
#   namespace: 'jenkins-cicd'
#   annotations:
#     service.alpha.openshift.io/dependencies: '[{"name": "jenkins-jnlp", "namespace": "", "kind": "Service"}]'
#     service.openshift.io/infrastructure: 'true'
#   labels:
#     app: 'arco-saer-jenkins-app'
#     template: jenkins-persistent-template
# spec:
#   ports:
#     - name: web
#       nodePort: 0
#       port: 80
#       protocol: TCP
#       targetPort: 8080
#   selector:
#     name: 'jenkins'
#   sessionAffinity: None
#   type: ClusterIP
---
# Source: arco-saer-cicd-jenkins-pipelines/templates/02-service/jnlp-svc.yaml
apiVersion: v1
kind: Service
metadata:
  name: 'jenkins-jnlp'
  namespace: 'jenkins-cicd'
spec:
  ports:
    - name: agent
      nodePort: 0
      port: 50000
      protocol: TCP
      targetPort: 50000
  selector:
    name: 'jenkins'
  sessionAffinity: None
  type: ClusterIP

# apiVersion: v1
# kind: Service
# metadata:
#   name: 'jenkins-jnlp'
#   namespace: 'jenkins-cicd'
#   labels:
#     app: 'arco-saer-jenkins-app'
#     template: jenkins-persistent-template
# spec:
#   ports:
#     - name: agent
#       nodePort: 0
#       port: 50000
#       protocol: TCP
#       targetPort: 50000
#   selector:
#     name: 'jenkins-jnlp'
#   sessionAffinity: None
#   type: ClusterIP
---
# Source: arco-saer-cicd-jenkins-pipelines/templates/jekins-template.yaml.old
apiVersion: v1
kind: Service
metadata:
  name: 'jenkins-jnlp'
spec:
  ports:
    - name: agent
      nodePort: 0
      port: 50000
      protocol: TCP
      targetPort: 50000
  selector:
    name: 'jenkins'
  sessionAffinity: None
  type: ClusterIP
---
# Source: arco-saer-cicd-jenkins-pipelines/templates/jekins-template.yaml.old
apiVersion: v1
kind: Service
metadata:
  annotations:
    service.alpha.openshift.io/dependencies: '[{"name": "jenkins-jnlp", "namespace": "", "kind": "Service"}]'
    service.openshift.io/infrastructure: 'true'
  name: 'jenkins'
spec:
  ports:
    - name: web
      nodePort: 0
      port: 80
      protocol: TCP
      targetPort: 8080
  selector:
    name: 'jenkins'
  sessionAffinity: None
  type: ClusterIP
---
# Source: arco-saer-cicd-jenkins-pipelines/templates/01-deployment/jenkins-deployment.yaml
apiVersion: apps.openshift.io/v1
kind: DeploymentConfig
metadata:
  annotations:
    template.alpha.openshift.io/wait-for-ready: 'true'
  name: 'jenkins'
  namespace: 'jenkins-cicd'
spec:
  replicas: 1
  selector:
    name: 'jenkins'
  strategy:
    type: Recreate
  template:
    metadata:
      labels:
        name: 'jenkins'
    spec:
      containers:
        - resources:
            limits:
              memory: '5Gi'
          readinessProbe:
            httpGet:
              path: /login
              port: 8080
            initialDelaySeconds: 3
            timeoutSeconds: 240
          terminationMessagePath: /dev/termination-log
          name: jenkins
          livenessProbe:
            failureThreshold: 2
            httpGet:
              path: /login
              port: 8080
            initialDelaySeconds: 420
            periodSeconds: 360
            timeoutSeconds: 240
          securityContext:
            privileged: false
          imagePullPolicy: IfNotPresent
          volumeMounts:
            - mountPath: /var/lib/jenkins
              name: 'jenkins-data'
            - mountPath: /etc/pki/ca-trust/source/anchors
              name: 'jenkins-trusted-ca-bundle'
          image: ' '
      dnsPolicy: ClusterFirst
      restartPolicy: Always
      serviceAccountName: 'jenkins'
      volumes:
        - name: 'jenkins-data'
          persistentVolumeClaim:
            claimName: 'jenkins'
        - configMap:
            name: 'jenkins-trusted-ca-bundle'
            optional: true
          name: 'jenkins-trusted-ca-bundle'
  triggers:
    - imageChangeParams:
        automatic: true
        containerNames:
          - jenkins
        from:
          kind: ImageStreamTag
          name: 'jenkins:2'
          namespace: 'openshift'
        lastTriggeredImage: ''
      type: ImageChange
    - type: ConfigChange
---
# Source: arco-saer-cicd-jenkins-pipelines/templates/jekins-template.yaml.old
apiVersion: apps.openshift.io/v1
kind: DeploymentConfig
metadata:
  annotations:
    template.alpha.openshift.io/wait-for-ready: 'true'
  name: 'jenkins'
spec:
  replicas: 1
  selector:
    name: 'jenkins'
  strategy:
    type: Recreate
  template:
    metadata:
      labels:
        name: 'jenkins'
    spec:
      containers:
        - resources:
            limits:
              memory: '5Gi'
          readinessProbe:
            httpGet:
              path: /login
              port: 8080
            initialDelaySeconds: 3
            timeoutSeconds: 240
          terminationMessagePath: /dev/termination-log
          name: jenkins
          livenessProbe:
            failureThreshold: 2
            httpGet:
              path: /login
              port: 8080
            initialDelaySeconds: 420
            periodSeconds: 360
            timeoutSeconds: 240
          securityContext:
            capabilities: {}
            privileged: false
          imagePullPolicy: IfNotPresent
          volumeMounts:
            - mountPath: /var/lib/jenkins
              name: 'jenkins-data'
            - mountPath: /etc/pki/ca-trust/source/anchors
              name: 'jenkins-trusted-ca-bundle'
          capabilities: {}
          image: ' '
      dnsPolicy: ClusterFirst
      restartPolicy: Always
      serviceAccountName: 'jenkins'
      volumes:
        - name: 'jenkins-data'
          persistentVolumeClaim:
            claimName: 'jenkins'
        - configMap:
            name: 'jenkins-trusted-ca-bundle'
            optional: true
          name: 'jenkins-trusted-ca-bundle'
  triggers:
    - imageChangeParams:
        automatic: true
        containerNames:
          - jenkins
        from:
          kind: ImageStreamTag
          name: 'jenkins:2'
          namespace: 'openshift'
        lastTriggeredImage: ''
      type: ImageChange
    - type: ConfigChange
---
# Source: arco-saer-cicd-jenkins-pipelines/templates/06-route/jenkins-route.yaml
apiVersion: route.openshift.io/v1
kind: Route
metadata:
  annotations:
    haproxy.router.openshift.io/timeout: 4m
    template.openshift.io/expose-uri: 'http://{.spec.host}{.spec.path}'
  name: 'jenkins'
  namespace: 'jenkins-cicd'
spec:
  tls:
    insecureEdgeTerminationPolicy: Redirect
    termination: edge
  to:
    kind: Service
    name: 'jenkins'
# apiVersion: route.openshift.io/v1
# kind: Route
# metadata:
#   name: 'jenkins'
#   namespace: 'jenkins-cicd'
#   labels:
#     app: 'arco-saer-jenkins-app'
#   annotations:
#     haproxy.router.openshift.io/timeout: 4m
#     template.openshift.io/expose-uri: 'http://{.spec.host}{.spec.path}'
# spec:
#   tls:
#     insecureEdgeTerminationPolicy: Redirect
#     termination: edge
#   to:
#     kind: Service
#     name: 'jenkins'
---
# Source: arco-saer-cicd-jenkins-pipelines/templates/jekins-template.yaml.old
apiVersion: route.openshift.io/v1
kind: Route
metadata:
  annotations:
    haproxy.router.openshift.io/timeout: 4m
    template.openshift.io/expose-uri: 'http://{.spec.host}{.spec.path}'
  name: 'jenkins'
spec:
  tls:
    insecureEdgeTerminationPolicy: Redirect
    termination: edge
  to:
    kind: Service
    name: 'jenkins'
